--- a/index.html
+++ b/index.html
@@ -46,9 +46,9 @@
         </figure>
 
         <div class="info-content">
-          <h1 class="name" title="Alireza Hamoudzadeh">Alireza Hamoudzadeh</h1>
+          <h1 class="name" title="Alireza Hamoudzadeh">Alireza <br> Hamoudzadeh</h1>
 
-          <p class="title">Researcher in inland water, glacier, and vegitation monitoring</p>
+          <p class="title">Researcher in inland water<br>, glacier, and vegitation monitoring</p>
         </div>
 
         <button class="info_more-btn" data-sidebar-btn>
@@ -74,15 +74,10 @@
             <div class="contact-info">
               <p class="contact-title">Email</p>
 
-              <a href="mailto:alirezahamoudzade@gmail.com" class="contact-link">alirezahamoudzade@gmail.com</a>
+              <a href="mailto:alirezahamoudzade@gmail.com" class="contact-link">alirezahamoudzade<br>@gmail.com</a>
             </div>
 
           </li>
-
-
-            <div class="icon-box">
-              <ion-icon name="calendar-outline"></ion-icon>
-            </div>
 
             <div class="contact-info">
               <p class="contact-title">Birthday</p>
@@ -165,17 +160,10 @@
 
         <section class="about-text">
           <p>
-            I'm Creative Director and UI/UX Designer from Sydney, Australia, working in web development and print media.
-            I enjoy
-            turning complex problems into simple, beautiful and intuitive designs.
-          </p>
-
-          <p>
-            My job is to build your website so that it is functional and user-friendly but at the same time attractive.
-            Moreover, I
-            add personal touch to your product and make sure that is eye-catching and easy to use. My aim is to bring
-            across your
-            message and identity in the most creative way. I created web design for many famous brand companies.
+            Highly motivated with a passion for developing innovative methods for water and glacier monitoring using SAR and LIDAR imagery.
+            My expertise in problem-solving and programming skills allows me to efficiently create new solutions to complex challenges in
+            the field. With a strong background in remote sensing and data analysis, I am constantly seeking new opportunities to advance
+            my knowledge and contribute to the scientific community.
           </p>
         </section>
 
